--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 						</div>
 					</div>
 					<div class='footer'>
-						<div class='footer-content'> Untuk informasi lebih lanjut silahkan hubungi (021) 3505112 atau email ke <a href='mailto:kemenkeu.prime@kemenkeu.go.id'>kemenkeu.prime@kemenkeu.go.id</a></div>
+						<!-- <div class='footer-content'> Untuk informasi lebih lanjut silahkan hubungi (021) 3505112 atau email ke <a href='mailto:kemenkeu@kemenkeu.go.id'>kemenkeu@kemenkeu.go.id</a></div> -->
 						<!-- <div class='footer-content footer-generated-content'> dibuat oleh sistem pada hari 29 February 2024 jam 10:12:02 </div>   -->
 
       <div class='footer-content footer-generated-content'>
